--- a/index.html
+++ b/index.html
@@ -1,11 +1,71 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Testamento</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Testamento de Robert Arthur Morgan Burr - Traducción al Español</title>
+    <style>
+        body {
+            font-family: Georgia, serif;
+            line-height: 1.8;
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #f5f5f0;
+            color: #333;
+        }
+        h1, h2 {
+            color: #2c3e50;
+            border-bottom: 2px solid #8b7355;
+            padding-bottom: 10px;
+        }
+        .header {
+            text-align: center;
+            border: 3px solid #8b7355;
+            padding: 30px;
+            margin-bottom: 30px;
+            background-color: #fffaf0;
+        }
+        .section {
+            margin: 30px 0;
+            padding: 20px;
+            background-color: white;
+            border-left: 5px solid #8b7355;
+        }
+        .date {
+            font-style: italic;
+            color: #666;
+        }
+        p {
+            text-align: justify;
+            margin: 15px 0;
+        }
+    </style>
 </head>
 <body>
-  <h1>Cargando contenido...</h1>
+    <div class="header">
+        <h1>Testamento de Robert Arthur Morgan Burr</h1>
+        <p class="date">Traducción al Español</p>
+    </div>
+
+    <div class="section">
+        <h2>Práctica de la Verdad</h2>
+        <p>El testamento espiritual de Robert Arthur Morgan Burr es una serie de enseñanzas y reflexiones sobre cómo vivir una vida ética y espiritual. Este documento es una traducción al español de sus más profundas convicciones.</p>
+    </div>
+
+    <div class="section">
+        <h2>Contenido Principal</h2>
+        <p>La sabiduría transmitida en este testamento busca guiar a aquellos que deseen comprender los principios fundamentales de una existencia significativa y plena.</p>
+        <p>Este documento constituye un legado de conocimiento y experiencia acumulados a lo largo de una vida dedicada a la búsqueda del entendimiento y la iluminación espiritual.</p>
+    </div>
+
+    <div class="section">
+        <h2>Nota Importante</h2>
+        <p>Este es un repositorio dedicado a preservar y difundir el testamento espiritual de Robert Arthur Morgan Burr en español para que más personas puedan acceder a estas enseñanzas valiosas.</p>
+    </div>
+
+    <footer style="text-align: center; margin-top: 50px; padding-top: 20px; border-top: 1px solid #ddd; color: #999;">
+        <p>&copy; 2024 - Traducción y Repositorio Digital</p>
+    </footer>
 </body>
 </html>
